Añadiendo los meta

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <title>Portafolio CV - Renzo Castilla</title>
     <meta name="description" content="Hola bienvenid@ a mi Portafolio Profesional, soy Renzo Castilla, Desarrollador Web">
     <!-- Iconos -->
-    <link rel="canonical" href="https://rencas1207.github.io/PortfolioCV-vbeta">
-    <link rel="favicon" href="https://rencas1207.github.io/PortfolioCV-vbeta/img/favicon.png">
-    <link rel="apple-touch-icon" href="https://rencas1207.github.io/PortfolioCV-vbeta/img/favicon.png">
+    <link rel="canonical" href="https://rencas1207.github.io/portfolio-cv-vbeta">
+    <link rel="favicon" href="https://rencas1207.github.io/portfolio-cv-vbeta/img/favicon.png">
+    <link rel="apple-touch-icon" href="https://rencas1207.github.io/portfolio-cv-vbeta/img/favicon.png">
     <!-- El tema de color desde un dispositivo moviel -->
     <meta name="theme-color" content="#d90062">
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:title" name="twitter:title" content="Portafolio CV - Renzo Castilla">
-    <meta property="og:image" name="twitter:image" content="https://rencas1207.github.io/PortfolioCV-vbeta/img/hero-image-home.jpg">
-    <meta property="og:url" name="twitter:url" content="https://rencas1207.github.io/PortfolioCV-vbeta">
+    <meta property="og:image" name="twitter:image" content="https://rencas1207.github.io/portfolio-cv-vbeta/img/hero-image-home.jpg">
+    <meta property="og:url" name="twitter:url" content="https://rencas1207.github.io/portfolio-cv-vbeta">
     <meta property="og:description" name="twitter:description" content="Hola bienvenid@ a mi Portafolio Profesional, soy Renzo Castilla, Desarrollador Web">
     <!-- <meta property="og:title" content=""> -->
     <!-- <meta property="og:description" content=""> -->
